--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(to left, rgb(173, 19, 140), rgb(76, 175, 81));
+    background: linear-gradient(to left, rgb(19, 68, 173), rgb(76, 172, 175));
 }
 .logo img{
     margin-top: 60px;
@@ -40,7 +40,7 @@ body{
     text-decoration: none;
     margin-right:20px;
     padding:10px;
-    background-color: yellowgreen;
+    background-color: rgb(99, 205, 50);
     color:red;
     font-size: 20px;
     border:1px solid black;
@@ -58,7 +58,7 @@ h1{
     font-weight: bold;
     font-size: 80px;
     text-align: center;
-    color:greenyellow;
+    color:rgb(0, 0, 0);
 }
 .c1{
     margin-bottom: -10px;
@@ -77,7 +77,7 @@ h1{
     height: 500px;
     margin-left: 7%;
     border: solid 5px darkmagenta;
-    background-color: #86e708;
+    background-color: #0895e7;
     margin-right: 50px;
     text-align: center;
 }
@@ -89,7 +89,7 @@ h1{
     margin-right: 5%;
     height: 500px;
     border: solid 5px darkorange;
-    background-color: #86e708;
+    background-color: #0895e7;
     text-align: center;
 }
 .box-1 p{
